--- a/aero.html
+++ b/aero.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://kasworld-aero.blogspot.com/" />
+<meta http-equiv="refresh" content="0; url=https://kasworld-aero.blogspot.com/p/google-home.html" />
